--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -58,7 +58,8 @@ jobs:
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
             git add public/mockServiceWorker.js
-            git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
+            # git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
+            git commit --no-verify -m "BLABLA Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
             git push origin ${{ github.event.pull_request.head.ref }}
           else
             echo "No changes in mockServiceWorker.js"
