--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -28,6 +28,11 @@ jobs:
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@v2
       - uses: actions/checkout@v4
+      - name: Authenticate with PAT
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          echo $PAT_TOKEN | gh auth login --with-token
       - name: Set up node
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         uses: actions/setup-node@v4
@@ -42,6 +47,8 @@ jobs:
 
       - name: Regenerate mockServiceWorker.js
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config pull.rebase false
           git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
@@ -49,6 +56,8 @@ jobs:
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
