--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -3,6 +3,8 @@ name: msw
 on:  
   pull_request:
     types: [opened, synchronize]
+    paths-ignore:
+      - "public/mockServiceWorker.js"
     # branches:
     #   - master
 
@@ -28,11 +30,11 @@ jobs:
         id: dependabot-metadata
         uses: dependabot/fetch-metadata@v2
       - uses: actions/checkout@v4
-      - name: Authenticate with PAT
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo $PAT_TOKEN | gh auth login --with-token
+      # - name: Authenticate with PAT
+      #   env:
+      #     PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+      #   run: |
+      #     echo $PAT_TOKEN | gh auth login --with-token
       - name: Set up node
         if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         uses: actions/setup-node@v4
