--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -47,57 +47,66 @@ jobs:
           npm ci
 
 
-      # - name: Regenerate mockServiceWorker.js
-      #   if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #   run: |
-      #     git config pull.rebase false
-      #     git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
-      #     git checkout ${{ github.event.pull_request.head.ref }}
-      #     npx msw init public/ --save
-      # - name: Check for changes in mockServiceWorker.js
-      #   if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #   run: |
-      #     if [[ $(git status --porcelain) ]]; then
-      #       git status --porcelain
-      #       git add public/mockServiceWorker.js
-      #       # git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
-      #       git commit --no-verify -m "BLABLA Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
-      #       git push origin ${{ github.event.pull_request.head.ref }}
-      #     else
-      #       echo "No changes in mockServiceWorker.js"
-      #     fi
-
-
-
       - name: Regenerate mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
-        run: |          
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        run: |
           git config pull.rebase false
           git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
           git checkout ${{ github.event.pull_request.head.ref }}
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
-            git add .
+            git add public/mockServiceWorker.js
             git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
             git push origin ${{ github.event.pull_request.head.ref }}
           else
             echo "No changes in mockServiceWorker.js"
           fi
 
-      - name: Push new branch
-        run: |
-          git push --force-with-lease origin ${{ github.event.pull_request.head.ref }}
+
+
+      # - name: Regenerate mockServiceWorker.js
+      #   if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+      #   run: |
+      #     git status --porcelain
+      #     git config pull.rebase false
+      #     git pull origin master --allow-unrelated-histories
+          
+      #     git status --porcelain
+      #     git branch -r
+
+      #     git checkout master
+      #     git checkout -b MSW-1
+
+      #     git stash
+      #     npm i -D msw@latest
+
+      #     echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
+          
+      #     npx msw init public/ --save
+      # - name: Check for changes in mockServiceWorker.js
+      #   if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+      #   run: |
+      #     if [[ $(git status --porcelain) ]]; then
+      #       git status --porcelain
+
+      #       git add .
+      #       git commit -m "ROM - blabla"
+
+      #     else
+      #       echo "No changes in mockServiceWorker.js"
+      #     fi
+
+      # - name: Push new branch
+      #   run: |
+      #     git push --force-with-lease origin MSW-1
 
       # - name: Create new pull request
       #   env:
       #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #   run: |
       #     gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
