--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -83,7 +83,8 @@ jobs:
         run: npm run lint:ci
       - name: Annotate Code Linting Results
         uses: ataylorme/eslint-annotate-action@v3
-        if: ${{ always() && github.actor != 'dependabot[bot]' }} # dependabot doesn't have permissions
+        # if: ${{ always() && github.actor != 'dependabot[bot]' }} # dependabot doesn't have permissions
+        if: ${{ always() }} # dependabot doesn't have permissions
         with:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           report-json: 'eslint_report.json'
